# hcom

./: Cargo.toml  Justfile  README.md  dist.toml  gemini-extension.json  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTAXIS-FORK.md  CONTAXIS-SESSION-2026-06-30.md
hermes-bridge/: .env.example  README.md  SPEC.md  pyproject.toml
hermes-bridge/docs/: OPEN_QUESTIONS.md  SETUP.md
hermes-bridge/hermes_hcom_bridge/: __init__.py  forwarder.py  hcom_client.py  hermes_sender.py  tool_swarm.py
hermes-bridge/hermes_hcom_bridge/kanban/: __init__.py  app.py
hermes-bridge/hermes_hcom_bridge/kanban/static/: index.html
hermes-bridge/plugins/swarm/: __init__.py  plugin.yaml
hermes-bridge/run/: start.sh
hermes-bridge/tests/: test_forwarder.py  test_hcom_client.py  test_kanban.py  test_tool_swarm.py
scripts/: install-mock-tools.sh
skills/hcom-agent-messaging/: SKILL.md
src/: bootstrap.rs  config.rs  delivery.rs  instance_binding.rs  instance_lifecycle.rs  integration_spec.rs  launcher.rs  messages.rs  router.rs  tool.rs  update.rs
src/commands/: bundle.rs  config.rs  fork.rs  help.rs  hooks.rs  launch.rs  list.rs  reset_preview.rs  resume.rs  send.rs  status.rs  stop.rs  transcript.rs
src/core/: filters.rs  helpers.rs  tips.rs
src/db/: subscriptions.rs
src/delivery/: antigravity.rs
src/hooks/: antigravity.rs  claude.rs  claude_args.rs  codex.rs  cursor.rs  devin.rs  family.rs  kimi.rs  mod.rs  pi.rs
src/pty/: mod.rs  (+1 more)
tests/: cli_smoke.rs  parser_help_drift.rs  real_tool_claude.rs  real_tool_codex.rs  test_pty_delivery.rs  test_relay_roundtrip.rs
(+31 files in other folders)
