[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-hcom-bridge"
version = "0.1.0"
description = "Ponte hcom (barramento de agentes) <-> hermes-agent (Telegram/multiuser/API)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContAxis" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # test client do FastAPI
]

[tool.setuptools.packages.find]
include = ["hermes_hcom_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
